[gd_scene load_steps=3 format=2]

[ext_resource path="res://modules/chunks_module/ChunkLoader.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

[node name="ChunkLoader" type="Area2D"]
collision_layer = 0
collision_mask = 32768
monitorable = false
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_ChunkLoader_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_ChunkLoader_area_exited"]
